Opened 16 years ago

Closed 16 years ago

#1707 closed bug (fixed)

system() doesn't return a success code

Reported by: korli Owned by: axeld
Priority: normal Milestone: R1
Component: System/libroot.so Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

when using the attached test app in BeOS, system() returns 0. when using it in Haiku, system() returns -1

Attachments (1)

test_system.c (162 bytes ) - added by korli 16 years ago.
test app

Download all attachments as: .zip

Change History (3)

by korli, 16 years ago

Attachment: test_system.c added

test app

comment:1 by jackburton, 16 years ago

our system() call does:

status_t returnValue; status_t error = wait_for_thread(thread, &returnValue); if (error != B_OK) {

errno = error; return -1;

} return returnValue;

Maybe we could just return B_OK instead. After all, the error check is already done before.

comment:2 by korli, 16 years ago

Resolution: fixed
Status: newclosed

we just continue to wait when a signal is received. fixed in hrev23439.

Note: See TracTickets for help on using tickets.