system() should continue to wait when wait_for_thread returns B_INTERRUPTED fixes bug #1707

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23439 a95241bf-73f2-0310-859d-f6bbb57e9c96